stylesheet.css
/*VARIABLES*/

:root {
	--fpo-bg-color: #e1e1e1;
	--fpo-bg2-color:#a9a9a9;
	--body: inconsolata;
}

/*RULES*/

@font-face {
	font-family: inconsolata;
	src: url(fonts/insconsolata.eot);
	src: url(fonts/Inconsolata.woff) format('woff'), url(fonts/Inconsolata.ttf) format('truetype'), url(fonts/Inconsolata.svg) format('svg'), local('Inconsolata'), local('Inconsolata'), url('fonts/insconsolata.eot');
}

@font-face {
	font-family: raisonne;
	src: url(fonts/Raisonne_Demibold.eot);
	src: url(fonts/Raisonne_Demibold.woff) format('woff'), url(fonts/Raisonne_Demibold.ttf) format('truetype'), url(fonts/Raisonne_Demibold.svg) format('svg'), local('Raisonne'), local('Raisonne_Demibold'), url('fonts/Raisonne_Demibold.eot');
}

h1 {
	font-family: raisonne, sans-serif;
	font-size: 48px;
	color: #ff5252;
}

p {
	font-family: inconsolata, monospace;
	font-size: 20px;
}

.small{
	font-size: 14px;
}

li a {
	font-family: inconsolata, monospace;
	font-size: 20px;
	text-decoration: none;
}

a {
	text-decoration: none;
	color: black;
}

a:hover{
	text-decoration: underline;
}

	/*ANIMATIONS*/

	@keyframes blur {
		from {
			filter: blur(0);
		}
		to {
			filter: blur(4px);
			transform: scale(1.1);
		}
	}

	@keyframes fadeIn {
		from {
			opacity: 0;
		}
		to {
			opacity: 1;
		}
	}

	/*HTML*/


	html, body {
		margin: 0 auto;
		min-height: 100%;
		max-height: 100%;
	}

	body {
		background: #fff;
		animation-name: fadeIn;
		animation-duration: 2s;
		animation-fill-mode: forwards;
	}

	/*PLACEHOLDER BOX*/
	.placeholder {
		width: 200px;
		height: 200px;
		border: solid 2px black;

	}

	/*WRAPPER*/
	.wrapper {
		position: relative;
		min-height: 100%;
		margin: 0 auto;
		width: 1280px;
		justify-content: center;
	}

	/*GRID CONTAINER*/

	.grid-container {
		display: flex;
		grid-template-columns: auto auto auto auto;
		text-align: center;

	}

	/*GRID ITEMS*/

	.grid-item {
		padding: 0px;
		font-size: 30px;
		width: 100%;
		height: 300px;
		position: relative;
		display: inline-block;
		overflow: hidden;
		margin: 0;
		background-size: cover;
	}

	.work-img {
		max-width: 100%;
		min-height: 100%;

	}

	.work-img:hover {
		opacity: .7;
		animation-name: blur;
		animation-duration: .5s;
		animation-fill-mode: forwards;
	}

	.work-caption {
		position: absolute;
		width: 100%;
		text-align: center;
		margin-top: 110px;
		font-size: 26px;
		color: black;
		z-index: 1;
		visibility: hidden;
	}

	.grid-item:hover .work-caption {
		visibility: visible;
	}

	.static-img {
		max-width: 100%;
		min-height: 100%;
	}

	/*GLOBAL NAVIGATION*/

	.global-nav {
		width: 100%;
		display: inline-block;
		position: relative;
		text-align: center;
		margin: 0 auto;
		padding-top: 10px;
		padding-bottom: 10px;
		padding-left: -15px;
	}

	.global-nav li{
		text-align: center;
		display: inline;
		list-style-type: none;
		padding-right: 30px;

	}

	.nav-link {
		color: black;
	}

	/*HEADER CONTENT*/
	.header-content{
		text-align: left;
		width: 1080px;
		height: 60%;
		padding-bottom: 200px;
		background-color: var(fpo--bg2-color);
	}

	.header-content h1{
		padding-top: 100px;
	}


	/*GRID PAGES*/

	.content-container {
		width: 100%;
		display: flex;
		flex-wrap: wrap;
		padding-bottom: 100px;
		padding-top: -100px;
	}

	.content-container img {
		padding-right: 15px;
		padding-top: 10px;
		flex-wrap: wrap;

	}

	.work-header-content{
		text-align: left;
		width: 1080px;
		height: 60%;
		padding-bottom: 85px;
		background-color: var(fpo--bg2-color);
	}



	/*GLOBAL FOOTER*/

	.global-footer {
		width: 100%;
		display: block;
		position: sticky;
		text-align: center;
		justify-content: center;
		margin: 0;
		background: #ff5252;
		height: 200px;
		padding-top: 20px;
		padding-bottom: 20px;
	}

	.global-footer li{
		color: white;
		display: inline;
		list-style-type: none;
		padding-right: 20px;

	}

	.footer-link {
		color: white;
	}

	.footer-text{
		color: #fff;
		padding-left: 15px;
		padding-top: 20px;
		padding-bottom: 20px;
		text-align: center;
		font-size: 18px;
	}

/*MEDIA QUERIES*/


/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
	html, body {
		margin: 0 auto;
	}

	h1 {
		font-size: 42px;
	}

	li a {
	font-family: inconsolata, monospace;
	font-size: 16px;
	text-decoration: none;
}

table {
	width: 100px;
}
	.wrapper {
		margin: 0 auto;
		width: 90%;
		min-height: 100%;
	}


	.work-header-content {
		text-align: left;
		width: 100%;
		height: 100%;
		padding-bottom: 100px;
	}

	.header-content{
		text-align: left;
		width: 100%;
		height: 100%;
		padding-bottom: 100px;
		background-color: var(fpo--bg2-color);
	}

	.header-content h1{
		padding-top: 50px;
	}

	.grid-container {
	display: block;
	width: 100%;
}

.grid-item {
	width: 100%;
	height: auto;
	display: block;
	background-size: contain;
	padding: -10px;
}

.content-container {
	display: flex;
	flex-wrap: wrap;
	padding-bottom: 100px;
	padding-top: -100px;
}
.content-container img {
	flex-wrap: wrap;
}

.global-footer {
	width: 100%;
	display: block;
	position: sticky;
	background: #ff5252;
	height: 200px;
	padding-top: 20px;
	padding-bottom: 20px;

}

.footer-text{
	color: #fff;
	padding-top: 20px;
	padding-bottom: 20px;
	text-align: center;
	font-size: 18px;
}
}

/* Extra small devices (phones, 600px and up) */
@media only screen and (min-width: 600px) {
	html, body {
		margin: 0 auto;
	}

	h1 {
		font-size: 42px;
	}

	li a {
	font-family: inconsolata, monospace;
	font-size: 16px;
	text-decoration: none;
}

table {
	width: 100px;
}

	.wrapper {
		margin: 0 auto;
		width: 90%;
		min-height: 100%;
	}

	.work-header-content {
		text-align: left;
		width: 100%;
		height: 100%;
		padding-bottom: 100px;
	}

	.header-content{
		text-align: left;
		width: 100%;
		height: 100%;
		padding-bottom: 225px;
		background-color: var(fpo--bg2-color);
	}

	.header-content h1{
		padding-top: 50px;
	}

	.grid-container {
		display: flex;
		grid-template-columns: auto auto auto auto;
}

.grid-item {
	width: 100%;
	height: auto;
	display: block;
	margin-bottom: -20px;
	background-size: contain;
}

.content-container {
	display: flex;
	flex-wrap: wrap;
	padding-bottom: 100px;
	padding-top: -100px;
}
.content-container img {
	flex-wrap: wrap;
}

.global-footer {
	width: 100%;
	display: block;
	position: sticky;
	background: #ff5252;
	height: 200px;
	padding-top: 20px;
	padding-bottom: 20px;

}

.footer-text{
	color: #fff;
	padding-top: 20px;
	padding-bottom: 20px;
	text-align: center;
	font-size: 18px;
}
}


/* Extra small devices (tablets, 768px and up) */
@media only screen and (min-width: 768px) {
	html, body {
		margin: 0 auto;
	}

	h1 {
		font-size: 42px;
	}

	li a {
	font-family: inconsolata, monospace;
	font-size: 16px;
	text-decoration: none;
}

table {
	width: 100px;
}
	.wrapper {
		margin: 0 auto;
		width: 90%;
		min-height: 100%;
	}


	.work-header-content {
		text-align: left;
		width: 100%;
		height: 100%;
		padding-bottom: 100px;
	}

	.header-content{
		text-align: left;
		width: 100%;
		height: 100%;
		padding-bottom: 100px;
		background-color: var(fpo--bg2-color);
	}

	.header-content h1{
		padding-top: 50px;
	}


.grid-item {
	width: 100%;
	height: auto;
	margin-bottom: -20px;
}

.content-container {
	display: flex;
	flex-wrap: wrap;
	padding-bottom: 100px;
	padding-top: -100px;
}
.content-container img {
	flex-wrap: wrap;
}

.global-footer {
	width: 100%;
	display: block;
	position: sticky;
	background: #ff5252;
	height: 150px;
	padding-top: 20px;
	padding-bottom: 20px;

}

.footer-text{
	color: #fff;
	padding-top: 20px;
	padding-bottom: 20px;
	text-align: center;
	font-size: 18px;
}
}

/* Extra small devices (desktop, 1024 and up) */
@media only screen and (min-width: 1024px) {
	html, body {
		margin: 0 auto;
	}

	h1 {
		font-size: 42px;
	}

	li a {
	font-family: inconsolata, monospace;
	font-size: 16px;
	text-decoration: none;
}

table {
	width: 100px;
}
	.wrapper {
		margin: 0 auto;
		width: 90%;
		min-height: 100%;
	}


	.work-header-content {
		text-align: left;
		width: 100%;
		height: 100%;
		padding-bottom: 100px;
	}

	.header-content{
		text-align: left;
		width: 100%;
		height: 100%;
		padding-bottom: 100px;
		background-color: var(fpo--bg2-color);
	}

	.header-content h1{
		padding-top: 50px;
	}


.grid-item {
	width: 100%;
	height: auto;
	margin-bottom: -20px;
}

.content-container {
	display: flex;
	flex-wrap: wrap;
	padding-bottom: 100px;
	padding-top: -100px;
}
.content-container img {
	flex-wrap: wrap;
}

.global-footer {
	width: 100%;
	display: block;
	position: sticky;
	background: #ff5252;
	height: 225px;
	padding-top: 20px;
	padding-bottom: 20px;

}

.footer-text{
	color: #fff;
	padding-top: 20px;
	padding-bottom: 20px;
	text-align: center;
	font-size: 18px;
}
}

